:bug: Fix spacing issue with FF

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -286,7 +286,7 @@ body {
 }
 
 .jld-new-look .todos td.todos-text {
-  width: 500px !important;
+  width: 496px !important;
 }
 
 .jld-new-look .todos-boxes {
