--- a/src/css/scss/partials/components/_jld-new-look.scss
+++ b/src/css/scss/partials/components/_jld-new-look.scss
@@ -58,7 +58,7 @@ $jld-new-look-look-todos-boxes-animation-01--dimensions: image-dimensions('/src/
             }
 
             &.todos-text {
-                width: 500px !important;
+                width: 496px !important;
             }
         }
     }
